# vr_pc_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tf_server/lib/tf_server/: tf_server
install/tf_server/share/tf_server/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vr_camera/lib/vr_camera/: vr_node
install/vr_camera/share/vr_camera/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vr_sim/lib/vr_sim/: image_duplicator  pose_controller  robot_movement  sphere_mover  (+1 more)
log/: latest_build
pc_scripts/: gazebo.sh  rviz.sh  server.sh
src/gazebo_sim/: CMakeLists.txt  package.xml
src/gazebo_sim/launch/: gazebo.launch.py
src/gazebo_sim/meshes/: head.stl
src/gazebo_sim/src/: sphere_mover_node.cpp
src/gazebo_sim/urdf/: head.urdf  head_vrglass.urdf  rviz_head.urdf
src/gazebo_sim/worlds/: Cafe.world  Office.world  Workshop.world  house.world  model1.world
src/rviz_sim/: CMakeLists.txt  package.xml
src/rviz_sim/launch/: display_ros2.rviz  display_ros2_v2.rviz  rviz.launch.py
src/rviz_sim/urdf/: head_vrglass.urdf  rviz_head.urdf
src/tf_server/: setup.py
src/tf_server/tf_server/: tf_server.py  tf_server2.py
src/vr_camera/: setup.cfg  setup.py
src/vr_camera/vr_camera/: vr_node.py
src/vr_sim/: CMakeLists.txt
src/vr_sim/launch/: gazebo.launch.py  rviz.launch.py
src/vr_sim/urdf/: head.urdf  rviz_head.urdf
src/vr_sim/worlds/: office.world
vr_gui/: main.py  main_v1.py  ui_veesion _v1.py  ui_veesion.py  veesion.ui  veesion_ui.py
(+219 files in other folders)
